adding first getting started post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Daniel A. White</title>
+  <title>Daniel A. White - {{ page.title }} </title>
 </head>
-<body>
+<body
+  <header><a href="/">Daniel A. White</a></header>
   {{ content }}
 </body>
 </html>
