adding bootstrap and post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Daniel A. White - {{ page.title }} </title>
+  <title>Daniel A. White - {{ page.title }}</title>
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" /> 
 </head>
-<body
-  <header><a href="/">Daniel A. White</a></header>
+<body>
+  <header>
+    <div class="navbar navbar-fixed-top">
+		<div class="container">
+            <ul class="nav">
+              <li class="">
+                <a href="./index.html">Overview</a>
+              </li>
+              <li class="">
+                <a href="./scaffolding.html">Scaffolding</a>
+              </li>
+              <li class="active">
+                <a href="./base-css.html">Base CSS</a>
+              </li>
+              <li class="">
+                <a href="./components.html">Components</a>
+              </li>
+              <li class="">
+                <a href="./javascript.html">Javascript plugins</a>
+              </li>
+              <li class="">
+                <a href="./less.html">Using LESS</a>
+              </li>
+              <li class="divider-vertical"></li>
+              <li class="">
+                <a href="./download.html">Customize</a>
+              </li>
+              <li class="">
+                <a href="./examples.html">Examples</a>
+              </li>
+            </ul>
+</div>
+      </div>
+    <a href="/">Daniel A. White</a>
+  </header>
   {{ content }}
+  <footer>&copy; 2012 Daniel A. White</footer>
+  <script src="/js/bootstrap.min.js" />
 </body>
 </html>
